--- a/journal-writings/modernized/15-keeping-negroes.adoc
+++ b/journal-writings/modernized/15-keeping-negroes.adoc
@@ -1,4 +1,4 @@
-[#negroes, short="Considerations on the Keeping of Negroes"]
+[short="Considerations on the Keeping of Negroes"]
 == Considerations on the Keeping of Negroes &#8212; Part 1 / Recommended to the Professors of Christianity of Every Denomination
 
 [.chapter-subtitle--blurb]
