--- a/journal-writings/original/16-various-subjects.adoc
+++ b/journal-writings/original/16-various-subjects.adoc
@@ -1,4 +1,4 @@
-[#various, short="Considerations on Various Subjects"]
+[short="Considerations on Various Subjects"]
 == Considerations on Pure Wisdom and Human Policy; On Labour; On Schools; and On the Right Use of the Lord`'s Outward Gifts.
 
 [.chapter-subtitle--blurb]
