--- a/journal-writings/original/17-harmony.adoc
+++ b/journal-writings/original/17-harmony.adoc
@@ -1,4 +1,4 @@
-[#harmony, short="Considerations on the Harmony of Mankind"]
+[short="Considerations on the Harmony of Mankind"]
 == Considerations on the True Harmony of Mankind; And How It Is To Be Maintained.
 
 [.chapter-subtitle--blurb]
