--- a/journal-writings/modernized/16-various-subjects.adoc
+++ b/journal-writings/modernized/16-various-subjects.adoc
@@ -1,4 +1,4 @@
-[#various, short="Considerations on Various Subjects"]
+[short="Considerations on Various Subjects"]
 == Considerations on the Pure Wisdom and Human Policy; on Labor, on schools; and on the Right Use of the Lord`'s Outward Gifts.
 
 [.chapter-subtitle--blurb]
