--- a/journal-writings/modernized/17-harmony.adoc
+++ b/journal-writings/modernized/17-harmony.adoc
@@ -99,9 +99,9 @@ becomes as distinguishable as light from darkness,
 to such who are crucified to the world.
 
 Our holy Shepherd, to encourage his flock in firmness and perseverance,
-reminds them of his love for them; "`As the Father has loved me, so have I loved you;
-continue you in my love;`" and in another place he
-graciously points out the danger of departing therefrom,
+reminds them of his love for them;
+"`As the Father has loved me, so have I loved you; continue in my love;`"
+and in another place he graciously points out the danger of departing therefrom,
 by going into unsuitable employments.
 
 This he represents in the similitude of offense from that useful active member, the hand;
@@ -589,10 +589,11 @@ how mournful is the subject?
 It is worthy of remembrance, that people in different ages,
 deeply baptized into the nature of that work for which Christ suffered,
 have joyfully offered up their liberty and lives for promoting it in the earth.
-Policarp, who was reputed a disciple of St.
-John, having attained to great age, was at length sentenced to die for his religion,
+
+Polycarp, who was reputed a disciple of St. John, having attained to great age,
+was at length sentenced to die for his religion,
 and being brought to the fire, prayed nearly as follows,
-"`You God and Father of our Lord Jesus Christ,
+"`O God and Father of our Lord Jesus Christ,
 by whom I have received the knowledge of you!
 O God of the angels and powers, and of every living creature,
 and of all sorts of just men who live in your presence;
