--- a/journal-writings/modernized/18-remarks.adoc
+++ b/journal-writings/modernized/18-remarks.adoc
@@ -1065,7 +1065,7 @@ and made the hearts of the righteous sad.`"
 Some works of iniquity carried on by the people were represented by the prophet Hosea,
 in the similitude of ploughing, reaping and eating the fruit;
 "`You have plowed wickedness, reaped iniquity, eaten the fruit of lying,
-because you didst trust in your own way, to the multitude of your mighty men.`"
+because you trusted in your own way, to the multitude of your mighty men.`"
 I have felt great distress of mind since I came on this island,
 on account of the members of our Society being mixed
 with the world in various sorts of business and traffic,
@@ -1126,8 +1126,8 @@ in your employments which you are exercised in.`"
 See his works, page 42, etc.
 
 George Fox, in an epistle writes thus: "`Friends, stand in the eternal power of God,
-witnesses against the pomps and vanities of this world.
-"`Such tradesmen who stand as witnesses in the power of God,
+witnesses against the pomps and vanities of this world.`"
+Such tradesmen who stand as witnesses in the power of God,
 cannot fulfill the people`'s minds in these vanities,
 and therefore they are offended at them.
 
