--- a/journal-writings/original/17-harmony.adoc
+++ b/journal-writings/original/17-harmony.adoc
@@ -602,7 +602,7 @@ It is worthy of remembrance, that people in different ages,
 deeply baptised into the nature of that work for which Christ suffered,
 have joyfully offered up their liberty and lives for promoting it in the earth.
 
-Policarp, who was reputed a disciple of St. John, having attained to great age,
+Polycarp, who was reputed a disciple of St. John, having attained to great age,
 was at length sentenced to die for his religion, and being brought to the fire,
 prayed nearly as follows, "`Thou God and Father of our Lord Jesus Christ,
 by whom I have received the knowledge of thee!
