--- a/journal-writings/original/18-remarks.adoc
+++ b/journal-writings/original/18-remarks.adoc
@@ -1173,9 +1173,8 @@ in your employments which you are exercised in.`"
 See his works, page 42, etc.
 
 George Fox, in an epistle writes thus: "`Friends, stand in the eternal power of God,
-witnesses against the pomps and vanities of this world.
-
-"`Such tradesmen who stand as witnesses in the power of God,
+witnesses against the pomps and vanities of this world.`"
+Such tradesmen who stand as witnesses in the power of God,
 cannot fulfill the people`'s minds in these vanities,
 and therefore they are offended at them.
 
