--- a/journal-writings/original/10-chapter-8.adoc
+++ b/journal-writings/original/10-chapter-8.adoc
@@ -29,7 +29,7 @@ had conversation with some noted Friends concerning their slaves:
 and I returned home in a thankful sense of the goodness of the Lord.
 
 From the care I had felt growing in me for some years,
-I wrote Considerations on keeping Negroes, part the second;
+I wrote [.book-title]#Considerations on keeping Negroes,# part the second;
 which was printed during this year 1762.
 When the overseers of the press had done with it, they offered to get a number printed,
 to be paid for out of the Yearly Meeting stock, and to be given away;
