update obsolete hyphened spellings

--- a/journal-writings/modernized/07-chapter-5.adoc
+++ b/journal-writings/modernized/07-chapter-5.adoc
@@ -71,7 +71,7 @@ to correspond with the Meeting for Sufferings in London;
 and another to visit our Monthly and Quarterly Meetings; and after their appointment,
 before the last adjournment of the meeting,
 it was agreed that these two committees should meet
-together in Friends`' school-house in the city,
+together in Friends`' schoolhouse in the city,
 at a time then concluded on,
 to consider some things in which the cause of Truth was concerned.
 These committees meeting together, had a weighty conference in the fear of the Lord;
