update sea-coast to seacoast

--- a/journal-writings/original/04-chapter-2.adoc
+++ b/journal-writings/original/04-chapter-2.adoc
@@ -179,7 +179,7 @@ yet in future the consequences will be grievous to posterity.
 I express it as it hath appeared to me, not at once, or twice,
 but as a matter fixed on my mind.
 
-Soon after my return home, I felt an increasing concern for Friends on our sea-coast;
+Soon after my return home, I felt an increasing concern for Friends on our seacoast;
 and on the 8th day of the eighth month, in the year 1746, with the unity of Friends,
 and in company with my beloved friend and neighbour Peter Andrews,
 brother to my companion before-mentioned, I set forward,
