--- a/journal-writings/original/13-chapter-11.adoc
+++ b/journal-writings/original/13-chapter-11.adoc
@@ -26,7 +26,7 @@ being apprehensive,
 that as my concern was principally toward the Northern parts of England,
 it would be most proper to go in a vessel bound to Liverpool or Whitehaven.
 While I was at Philadelphia deliberating on this occasion,
-I was informed that my beloved friend Samuel Emlen, jr., intending to go to London,
+I was informed that my beloved friend Samuel Emlen, Jr., intending to go to London,
 had taken passage for himself in the cabin of the ship called Mary and Elizabeth,
 of which James Sparks was master, and John Head of the city of Philadelphia,
 one of the owners; and I feeling a draft in my mind toward the steerage of the same ship,
