--- a/journal-writings/modernized/06-chapter-4.adoc
+++ b/journal-writings/modernized/06-chapter-4.adoc
@@ -23,7 +23,7 @@ As I lay still without any surprise looking upon it, words were spoken to my inw
 which filled my whole inward man: they were not the effect of thought,
 nor any conclusion in relation to the appearance,
 but as the language of the Holy One spoken in my mind; the words were:
-Certain Evidence of Divine Truth; and were again repeated exactly in the same manner;
+"`Certain Evidence of Divine Truth;`" and were again repeated exactly in the same manner;
 whereupon the light disappeared.
 
 Feeling the exercise in relation to a visit to
@@ -207,7 +207,7 @@ these two families being thus joined, were undoubtedly fit only for slaves.
 I replied, the flood was a judgment upon the world for their abominations;
 and it was granted that Cain`'s stock was the most wicked,
 and therefore unreasonable to suppose they were spared:
-as to Ham`'s going to the land of Nod for a wife, no time being fixed.
+as to Ham`'s going to the land of Nod for a wife, no time being fixed,
 Nod might be inhabited by some of Noah`'s family, before Ham married a second time;
 moreover the text says, "`That all flesh died that moved upon the earth.`"
 I further reminded them, how the prophets repeatedly declare,
