--- a/journal-writings/original/09-chapter-7.adoc
+++ b/journal-writings/original/09-chapter-7.adoc
@@ -61,7 +61,7 @@ and feeling Divine charity moving upon them.
 Of this I may speak a little; for though, since I left you,
 I have often found an engaging love and affection toward thee and my daughter,
 and friends about home, that going out at this time,
-when sickness is so great amongst you, fs a trial upon me;
+when sickness is so great amongst you, is a trial upon me;
 yet I often remember there are many widows and fatherless, many who have poor tutors,
 many who have evil examples before them, and many whose minds are in captivity;
 for whose sake my heart is at times moved with compassion,
