--- a/journal-writings/original/10-chapter-8.adoc
+++ b/journal-writings/original/10-chapter-8.adoc
@@ -338,7 +338,7 @@ are angry with those who for the sake of gain, took the advantage of their weakn
 Of this their chiefs have often complained, at their treaties with the English.
 Where cunning people pass counterfeits,
 and impose that on others which is good for nothing, it is considered as a wickedness;
-but to sell that to people which woeknow does them harm,
+but to sell that to people which we know does them harm,
 and which often works their ruin, for the sake of gain,
 manifests a hardened and corrupt heart;
 and is an evil which demands the care of all true lovers of virtue to suppress.
@@ -629,7 +629,7 @@ By the direction of our guide we sat down on a log,
 and he went to the town to tell the people we were come.
 My companion and I sitting thus together, in a deep inward stillness,
 the poor woman came and sat near us; and great awfulness coming over us,
-we i-ejoiced in a sense of God`'s love manifested to our poor souls.
+we rejoiced in a sense of God`'s love manifested to our poor souls.
 After awhile we heard a conk-shell blow several times,
 and then came John Curtis and another Indian man,
 who kindly invited us into a house near the town, where we found, I suppose,
@@ -679,7 +679,7 @@ and I was afterwards told that he said in substance;
 "`I love to feel where words come from.`"
 
 On the 19th day and first of the week,
-this morninsr in the meeting the Indian who came with the Moravian,
+this morning in the meeting the Indian who came with the Moravian,
 being also a member of that society, prayed;
 and then the Moravian spoke a short time to the people.
 In the afternoon they coming together,
