--- a/journal-writings/original/14-chapter-12.adoc
+++ b/journal-writings/original/14-chapter-12.adoc
@@ -10,7 +10,56 @@
 
 On the 8th day of the sixth month, 1772, we landed at London;
 and I went straightway to the Yearly Meeting of ministers and elders,
-which had been gathered, I suppose, about half an hour.
+which had been gathered, I suppose, about half an hour.^
+footnote:[The following is a well-authenticated account
+(given by William J. Allinson, editor of Friend`'s Review) of what transpired
+upon John Woolman`'s first appearance at the Yearly Meeting in England.
+The vessel reached London on the morning of the fifth day of the week,
+and Woolman, knowing that the meeting was then in session,
+lost no time in reaching it. Coming in late and unannounced,
+his peculiar dress and manner excited attention and apprehension that
+he was an itinerant enthusiast. He presented his certificate
+from Friends in America, but the dissatisfaction still remained,
+and someone remarked that perhaps the stranger Friend might feel that his
+dedication to this apprehended service was accepted, without further labor,
+and that he might now feel free to return to his home.
+John Woolman sat silent for a time,
+seeking the unerring counsel of Divine Wisdom.
+He was profoundly affected by the unfavorable reception he met with,
+and his tears flowed freely.
+{footnote-paragraph-split}
+In the love of Christ and his fellow-men he had, at a painful sacrifice,
+taken his life in his hands, and left behind the peace and endearments of home.
+That love still flowed out toward the people of England;
+must it henceforth be pent up in his own heart?
+He rose at last, and stated that he could not feel himself released
+from his prospect of labor in England.
+Yet he could not travel in the ministry without the unity of Friends;
+and while that was withheld he could not feel easy to be of any cost to them.
+He could not go back as had been suggested;
+but he was acquainted with a mechanical trade,
+and while the impediment to his services continued he hoped Friends
+would be kindly willing to employ him in such business as he was capable of,
+that he might not be chargeable to any.
+{footnote-paragraph-split}
+A deep silence prevailed over the assembly,
+many of whom were touched by the wise simplicity of the
+stranger`'s words and manner. After a season of waiting,
+John Woolman felt that words were given him to utter as a minister of Christ.
+The spirit of his Master bore witness to them in the hearts of his hearers.
+When he closed, the Friend who had advised against his further service
+rose up and humbly confessed his error,
+and avowed his full unity with the stranger.
+All doubt was removed; there was a general expression of unity and sympathy,
+and John Woolman, acknowledged by his brethren, passed on to his work.
+{footnote-paragraph-split}
+John Woolman was scrupulously neat in his dress and person,
+as may be inferred from his general character and from the fact
+that one of his serious objections to dyed clothing was that it served
+to conceal uncleanness, and was, therefore, detrimental to real purity.
+It is, however, quite probable that his outer man,
+on the occasion referred to above,
+was suggestive of a hasty toilet in the crowded steerage.]
 
 In this meeting, my mind was humbly contrite: in the afternoon,
 the meeting of business opened, which by adjournments held nearly a week.
